# NextPili

./: .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  LICENSE  README.md
.omo/run-continuation/: ses_07c1dc7dcffeT8Rc2W3l85wTgr.json  ses_07c1e5d6affe79tByOz2Lyp6Oi.json  ses_07c33de10ffedY3aHXuNyCoTPS.json  ses_07c3ddbb7ffe6wb2T3fwCLUsqe.json  ses_07c486152ffeThe8kT2Ta1NFKO.json  ses_07c578ec8ffeVqXcpz6FXuPFAn.json  ses_07c5cdd40ffeQru127RnoNGsao.json  ses_07c626225ffespl3Illn4d3WVz.json  ses_07c6de924ffeZanPGxjqjXQ0Ap.json  ses_07c71b8b8ffeu0Bovo78v9hvgr.json  ses_07c7f7c5bffe4CV0mZfvUxqbBR.json  ses_07c945b3affeHI7JrutXqEdUCY.json  ses_07ca2318bffeBcpCkec1HucdBY.json  ses_07ca2336cffeHVwZu04nJe2p0A.json  ses_07ca26162ffewTLpyCYa81IPGz.json  ses_07cb9a249ffe2CVUnfHomNFmvB.json  ses_07cba0c4fffeRRylsTv70TWxCi.json  ses_07ccdb23fffeigrw1QfXVe9TX7.json  ses_07cd71b48ffe6Y32FZjLvAIFVi.json  ses_07cdf0548ffesMUjSJcAwx1QCU.json  ses_07cdf4639ffeRWU0sgtzqAyviN.json  ses_07cdf93a6ffeQWYaxBKaYyzHb1.json  ses_07ce54c9effekxjrWK9zvQODcq.json  ses_07cee3e1effeknV0jYZJ4E93Xb.json  ses_07cf200ecffeMIzU5pYFgaljpU.json  ses_07cf23c93ffe6jUO3Z1DIE9ajT.json  ses_07cfb4b3bffepIfkEBeCdTmscd.json  ses_07d084f6cffeLO9W90fjDh1O7E.json  ses_07d0dbe9bffe21YSoOphIbEdJZ.json  ses_07d1cd1a2ffeEQQvt24vwUQ4v1.json  ses_07d204bb7ffeQMXuYWHDXTWUL8.json  ses_07d268ee1ffeJQwkoSTSGbm1lu.json  ses_07d3c0121ffek5uoGhljBIfEAz.json  ses_07d48118fffee7XRPnqoKpgKJh.json  ses_07d489f58ffesUctbRcvUED7L5.json  ses_07d4928d3ffekrNs3wvIm2c8ss.json  ses_07e768d1affe6QR5u7gIGf8i3V.json
app/: README.md  flutter_rust_bridge.yaml  l10n.yaml  pubspec.yaml
app/android/: settings.gradle.kts
app/android/app/: build.gradle.kts
app/lib/: app.dart  main.dart
app/lib/bridge/: core_api.dart  fake_core_api.dart
app/lib/bridge/frb/: auth_dto.dart  auth_service.dart  error.dart  frb_generated.dart  frb_generated.io.dart
app/lib/core/adaptive/: desktop_backdrop_sync.dart  desktop_os_fullscreen.dart  desktop_wallpaper.dart  (+3 more)
app/lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_zh.dart  app_zh.arb  l10n.dart
app/linux/: CMakeLists.txt
app/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
app/linux/runner/: CMakeLists.txt  desktop_compositor_blur.cc  desktop_compositor_blur.h  my_application.cc
app/macos/Flutter/: GeneratedPluginRegistrant.swift
app/macos/Runner/: MainFlutterWindow.swift
app/macos/Runner.xcodeproj/: project.pbxproj
app/rust_builder/android/: build.gradle
app/rust_builder/ios/: core.podspec
app/rust_builder/linux/: CMakeLists.txt
app/rust_builder/macos/: core.podspec
app/rust_builder/windows/: CMakeLists.txt
app/test/: danmaku_elapsed_test.dart  desktop_wallpaper_test.dart  engagement_bar_test.dart  playback_session_nav_test.dart  player_settings_local_state_test.dart  player_settings_overlay_test.dart  player_subtitle_config_test.dart  route_observer_popup_test.dart  special_danmaku_test.dart  subtitle_cues_test.dart  widget_test.dart
app/windows/: CMakeLists.txt
app/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
app/windows/runner/: Runner.rc  main.cpp
crates/auth/: Cargo.toml
crates/auth/src/: account.rs  app_sign.rs  buvid.rs  constants.rs  cookie.rs  lib.rs  password.rs  slot.rs  wbi.rs
crates/core/: Cargo.toml
crates/core/src/: app.rs  auth_dto.rs  auth_service.rs  error.rs  frb_generated.rs  heartbeat.rs  hw_decode.rs  lib.rs
crates/core/src/api/: auth.rs  dynamics.rs  engagement.rs  feed.rs  live.rs  mod.rs  pgc.rs  search.rs  settings.rs  simple.rs  social.rs  user.rs  video.rs
crates/domain/: Cargo.toml
crates/domain/src/: account.rs  codec.rs  danmaku.rs  dynamics.rs  engagement.rs  error.rs  feed.rs  id.rs  lib.rs  library.rs  live.rs  pgc.rs  quality.rs  reply.rs  search.rs  video.rs
crates/http/: Cargo.toml
crates/http/src/: client.rs  error.rs  lib.rs  middleware.rs  response.rs  serde_util.rs
crates/http/src/endpoints/: danmaku.rs  dynamics.rs  engagement.rs  feed.rs  live.rs  login.rs  mod.rs  nav.rs  pgc.rs  reply.rs  search.rs  user.rs  video.rs
crates/http/src/endpoints/login/: mod.rs  password.rs  qr.rs  sms.rs  types.rs
crates/media/: Cargo.toml
crates/media/src/: danmaku.rs  error.rs  lib.rs  playurl.rs  source.rs  subtitle.rs
crates/media/src/playurl/: dash.rs  durl.rs  labels.rs  mod.rs  raw.rs  select.rs  util.rs
crates/store/: Cargo.toml
crates/store/src/: accounts.rs  device.rs  error.rs  lib.rs  paths.rs  settings.rs
docs/: README.md  architecture.md  roadmap.md  writing.md
docs/api/: README.md
docs/api/auth/: app-sign.md  grpc.md  overview.md  wbi.md
docs/api/endpoints/: danmaku.md  dynamics.md  fav.md  live.md  login.md  member.md  misc.md  msg.md  pgc.md  reply.md  search.md  user.md  video.md
docs/design/: README.md  auth.md  core.md  domain.md  ffi.md  flutter.md  http.md  media.md  store.md
docs/ux/: README.md  copy.md  design-system.md  interaction.md  localization.md  motion.md  multi-platform.md
scripts/: codegen.sh  test-rust.sh
(+116 files in other folders)
