[package]
name = "auth"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NextPili account model, cookie jar, WBI / AppSign / buvid (no HTTP transport)"
publish = false

[dependencies]
domain = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
md-5 = { workspace = true }
hex = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
