[package]
name = "core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NextPili application core: use cases + flutter_rust_bridge entry"
publish = false

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
name = "core"

[dependencies]
domain = { workspace = true }
auth = { workspace = true }
store = { workspace = true }
http = { workspace = true }
media = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio = { workspace = true }
parking_lot = { workspace = true }
anyhow = { workspace = true }
flutter_rust_bridge = { workspace = true }

uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
