[package]
name = "domain"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NextPili domain models, errors, and pure policies (no IO)"
publish = false

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
