[package]
name = "http"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NextPili Bilibili HTTP client, middleware, and endpoint modules"
publish = false

[dependencies]
domain = { workspace = true }
auth = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
url = { workspace = true }
parking_lot = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
