[package]
name = "media"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NextPili media source normalization, quality, danmaku timeline"
publish = false

[dependencies]
domain = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
