[package]
name = "store"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "NextPili local persistence (accounts metadata, settings, progress)"
publish = false

[dependencies]
domain = { workspace = true }
auth = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3"
